# stair_detection

./: CMakeLists.txt  README.md  package.xml
launch/: stair_detection_pose.launch  stair_detection_pose_demo.rviz
src/: downsample_pc.hpp  euclidean_cluster.hpp  pc_from_image.cpp  pc_from_image.h  stair_detection_node.cpp  stair_detection_pose_node.cpp  stair_detector_geo.cpp  stair_detector_geo.h  stair_detector_pcd.cpp  stair_detector_pcd.h  test_img.cpp  test_stair_detector_pcd.cpp  transform_pc.hpp
